zeta-code/cli/tests/snapshots/real/03-approval/01-approved-final.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请创建 approved-by-tui.txt

● Ran write_file

● 工具已获批准并执行。文件写入完成。



















  ⏸ ask permissions on                                                   shift+tab to cycle policy
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰───────────────────────────────────────────────────────────────────────── zeta-real-scenario ─╯

  Enter send  ·  shift+tab permissions  ·  /home
