zeta-code/cli/tests/snapshots/real/03-approval/03-declined-final.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请尝试创建 declined-by-tui.txt

● write_file failed

● 工具调用被用户拒绝。没有写入文件。



















  ⏸ ask permissions on                                                   shift+tab to cycle policy
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰───────────────────────────────────────────────────────────────────────── zeta-real-scenario ─╯

  Enter send  ·  shift+tab permissions  ·  /home
