zeta-code/cli/tests/snapshots/real/03-approval/04-ask-permissions-details.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> 请创建 approved-by-tui.txt

● Ran write_file
└─ write_file [call-approve]
   {
     "path": "approved-by-tui.txt",
     "content": "approved through the real TUI\n"
   }
   wrote approved-by-tui.txt
   view full

● 工具已获批准并执行。文件写入完成。












                                                                         shift+tab to cycle policy
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ > Build anything                                                                             │
  ╰───────────────────────────────────────────────────────────────────────── zeta-real-scenario ─╯

  Space to expand · Enter to view details · Esc to return to input
