zeta-code/cli/tests/snapshots/real/03-approval/05-auto-review-running.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
> 请通过自动审查创建 auto-reviewed.txt

● write_file failed

● 自动审查拒绝了工具。





















                                                                         shift+tab to cycle policy
────────────────────────────────────────────────────────────────────────────────────────────────────
>
────────────────────────────────────────────────────────────────────────────────────────────────────
  zeta-real-scenario                                                                      ← agents
  ⏩ current: auto review on · ▶ next: bypass permissions on
