zeta-code/cli/tests/snapshots/real/03-approval/06-auto-review-details.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
❯ 请通过自动审查创建 auto-reviewed.txt

● write_file failed
└─ write_file [call-auto-review]
   {
     "path": "auto-reviewed.txt",
     "content": "approved by automatic review\n"
   }
   zeta_action_policy_feedback:{"kind":"denied","assessment_id":"<ID>
                             ","reason":"the fixture automatic reviewer denied this file
mutation","maximum_capabilities":[],"instruction":"Do not pursue the same outcome by workaround,
indirect execution, or policy circumvention. Continue only with a materially safer alternative."}
   view full

● 自动审查拒绝了工具。













────────────────────────────────────────────────────────────────────────────────────────────────────
❯
────────────────────────────────────────────────────────────────────────────────────────────────────
  ↑↓ select · space expand · enter details · esc input
