zeta-code/cli/tests/snapshots/real/03-approval/09-sandbox-blocked.snap
---
source: zeta-code/cli/tests/support/tui_process.rs
expression: screen
---
  <FIXTURE…>                                      …                            [— / —] [Dashboard]

> start a session before changing permissions

● SANDBOX-SETUP-DONE

> 尝试在工作区外创建 sandbox-must-not-write.txt

● Thought

● shell-command failed

● 沙盒拒绝了越界写入，目标文件没有生成。













  ▶ bypass permissions on                                                shift+tab to cycle policy
  ╭──────────────────────────────────────────────────────────────────────────────────────────────╮
  │ >                                                                                            │
  ╰───────────────────────────────────────────────────────────────────────── zeta-real-scenario ─╯

  Enter send  ·  shift+tab permissions  ·  /home
